# GA-MSSR

./: .env.example  .env.propfirm.example  .gitignore  CLAUDE.md  PRD.md  com.ga-mssr.live.plist  conftest.py  pyproject.toml  requirements.txt
data/: __init__.py  forex_config.py  loader.py  mnq_config.py  nq_config.py  pipeline.py  wavelet_filter.py
live/: __init__.py  bot.py  config.py  exchange.py  notifier.py  risk.py  trainer.py
live_forex/: __init__.py  bot.py  config.py  exchange.py  risk.py  trading_hours.py
live_futures/: bot.py  config.py  contract_utils.py  exchange.py  notifier.py  retrain_actor.py  risk.py  trading_hours.py  trainer.py
monitoring/: config.py  heartbeat.py  pidlock.py  readers.py
optimizers/: __init__.py  ga_mssr.py  ssr.py
reports/: daily_summary_15min.csv  forex_audusd_folds_15min.csv  forex_eurusd_folds_15min.csv  trades_15min.csv
scripts/: dashboard.py  download_eth_data.py  download_ib_data.py  generate_report.py  monitor.py  quant_agents.py  quant_team.py  quant_tools.py  run_backtest.py  run_eth_backtest_sim.py  run_eth_walkforward.py  run_filter_backtest.py  run_forex_backtest.py  run_ftmo_challenge.py  run_live.py  run_live_forex.py  run_live_futures.py  run_live_nautilus.py  run_threshold_backtest.py  run_walk_forward.py  run_walk_forward_filtered.py  run_walk_forward_time_filter.py  setup_mac_mini.sh  test_er_vs_adx.py  test_holdout.py  test_multi_timeframe.py  test_param_stability.py  test_reconciliation.py  test_stress.py  test_traderspost.py
strategies/: __init__.py  backtest.py  indicators.py  khushi_rules.py  (+1 more)
(+16 files in other folders)
